# miniRT

./: .gitignore  Makefile  main.c
.github/workflows/: norminette.yml
includes/: camera.h  define.h  io.h  minirt.h  objects.h  utils.h  vector3.h  xlibft.h  xsyscall.h
libft/: Makefile
libft/ft_stdlib/: ft_atod.c
libft/ft_string/: ft_bzero.c
libft/includes/: ft_stdlib.h
rt_files/: basic_cylinder.rt  basic_plane.rt  basic_sphere.rt  minimalist.rt  minimam_cylinder.rt  minimam_plane.rt  minimam_sphere.rt  rotate_cylinder.rt  translate_spheres.rt
rt_files/ng/: tabs_instead_of_spaces.rt
srcs/camera/: camera.c  screen.c
srcs/io/: ft_atod.c  read_ambient.c  read_camera.c  read_cylinder.c  read_file.c  read_light.c  read_plane.c  read_sphere.c  util.c  validate_arg.c
srcs/objects/: calc_lambert_cos_cylinder.c  camera.c  cylinder.c  cylinder_utils.c  object.c  plane.c  rt.c  screen.c  sphere.c
srcs/utils/: error.c  mlx_hooks.c  mlx_util.c  validate_double.c  validate_integer.c
srcs/vector3/: add.c  calc_dist.c  cos_of_angles.c  inner_product.c  multiply.c  norm.c  normalize.c  outer_product.c  print.c  sub.c  vector3.c
srcs/xlibft/: ft_xcalloc.c  ft_xlstnew.c  ft_xsplit.c  ft_xstrdup.c  ft_xstrjoin.c
srcs/xsyscall/: xclose.c  xdup2.c  xfork.c  xopen.c  xpipe.c  xwaitpid.c
tests/: CMakeLists.txt  io.cpp  test.sh  utils.cpp  vector.cpp
tools/: submit.sh
